// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lectorem the main component render with data with all data except title and subtitle should render without crashing 1`] = `
<div
  className="Lectorem"
>
  <div
    className="playerContainer"
  >
    <Player
      audioPath="./frere.mp3"
      onListen={[Function]}
    />
  </div>
  <div
    className="lectsContainer"
  >
    <Texts
      configuration={
        Object {
          "isBySentence": false,
          "isTranslationBelow": false,
          "isTranslationShown": false,
        }
      }
      paragraphs={
        Array [
          Object {
            "header": Object {
              "imagePath": "./frere.png",
            },
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 5.511,
                    "explanation": "\\"Brother\\" in this sense means the title of a monk. \\"Frère\\" is also where we get our word \\"friar\\"",
                    "start": 4.424,
                    "text": "Frère",
                    "translation": "Brother",
                  },
                  Object {
                    "end": 6.533,
                    "explanation": "In the English version of the song this is rendered as \\"John\\" but a more accurate translation would be \\"James\\" or \\"Jacob\\", from the Latin \\"Iacobus\\".",
                    "start": 5.51,
                    "text": "Jacques",
                    "translation": "James",
                  },
                  Object {
                    "text": ".",
                  },
                ],
                "sentenceTranslation": "Brother James.",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 7.683,
                    "explanation": "\\"Brother\\" in this sense means the title of a monk. \\"Frère\\" is also where we get our word \\"friar\\"",
                    "start": 6.618,
                    "text": "Frère",
                    "translation": "Brother",
                  },
                  Object {
                    "end": 8.79,
                    "explanation": "In the English version of the song this is rendered as \\"John\\" but a more accurate translation would be \\"James\\" or \\"Jacob\\", from the Latin \\"Iacobus\\".",
                    "start": 7.68,
                    "text": "Jacques",
                    "translation": "James",
                  },
                  Object {
                    "text": ".",
                  },
                ],
                "sentenceTranslation": "Brother James.",
              },
            ],
          },
          Object {
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 10.857,
                    "start": 8.831,
                    "text": "Dormez-vous?",
                    "translation": "Are you sleeping?",
                  },
                ],
                "sentenceTranslation": "Are you sleeping?",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 12.71,
                    "start": 11.025,
                    "text": "Dormez-vous?",
                    "translation": "Are you sleeping?",
                  },
                ],
                "sentenceTranslation": "Are you sleeping?",
              },
            ],
          },
          Object {
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 13.706,
                    "start": 13.21,
                    "text": "Sonnez",
                    "translation": "Ring",
                  },
                  Object {
                    "end": 15.399,
                    "explanation": "These were the bells to wake the monks for the \\"matins\\", the first chants in the day, very early in the morning.",
                    "start": 13.704,
                    "text": "les matines",
                    "translation": "the morning bells",
                  },
                  Object {
                    "text": "!",
                  },
                ],
                "sentenceTranslation": "Ring the morning bells!",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 15.924,
                    "start": 15.39,
                    "text": "Sonnez",
                    "translation": "Ring",
                  },
                  Object {
                    "end": 17.572,
                    "explanation": "These were the bells to wake the monks for the \\"matins\\", the first chants in the day, very early in the morning.",
                    "start": 15.923,
                    "text": "les matines",
                    "translation": "the morning bells",
                  },
                  Object {
                    "text": "!",
                  },
                ],
                "sentenceTranslation": "Ring the morning bells!",
              },
            ],
          },
          Object {
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 19.319,
                    "explanation": "An onomatopoeia for bells, like our \\"ding dong\\".",
                    "start": 17.57,
                    "text": "Ding, dang, dong.",
                  },
                ],
                "sentenceTranslation": "Ding, dang, dong.",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 21.632,
                    "explanation": "An onomatopoeia for bells, like our \\"ding dong\\".",
                    "start": 19.784,
                    "text": "Ding, dang, dong.",
                  },
                ],
                "sentenceTranslation": "Ding, dang, dong.",
              },
            ],
          },
        ]
      }
      readTime={null}
      showModal={[Function]}
    />
  </div>
  <Modal
    data={null}
    hideModal={[Function]}
  />
</div>
`;

exports[`Lectorem the main component render with data with all data should render without crashing 1`] = `
<div
  className="Lectorem"
>
  <h2>
    Frère Jacques
     
  </h2>
  <h3>
    (Are You Sleeping)
     
  </h3>
  <div
    className="playerContainer"
  >
    <Player
      audioPath="./frere.mp3"
      onListen={[Function]}
    />
  </div>
  <div
    className="lectsContainer"
  >
    <Texts
      configuration={
        Object {
          "isBySentence": false,
          "isTranslationBelow": false,
          "isTranslationShown": false,
        }
      }
      paragraphs={
        Array [
          Object {
            "header": Object {
              "imagePath": "./frere.png",
            },
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 5.511,
                    "explanation": "\\"Brother\\" in this sense means the title of a monk. \\"Frère\\" is also where we get our word \\"friar\\"",
                    "start": 4.424,
                    "text": "Frère",
                    "translation": "Brother",
                  },
                  Object {
                    "end": 6.533,
                    "explanation": "In the English version of the song this is rendered as \\"John\\" but a more accurate translation would be \\"James\\" or \\"Jacob\\", from the Latin \\"Iacobus\\".",
                    "start": 5.51,
                    "text": "Jacques",
                    "translation": "James",
                  },
                  Object {
                    "text": ".",
                  },
                ],
                "sentenceTranslation": "Brother James.",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 7.683,
                    "explanation": "\\"Brother\\" in this sense means the title of a monk. \\"Frère\\" is also where we get our word \\"friar\\"",
                    "start": 6.618,
                    "text": "Frère",
                    "translation": "Brother",
                  },
                  Object {
                    "end": 8.79,
                    "explanation": "In the English version of the song this is rendered as \\"John\\" but a more accurate translation would be \\"James\\" or \\"Jacob\\", from the Latin \\"Iacobus\\".",
                    "start": 7.68,
                    "text": "Jacques",
                    "translation": "James",
                  },
                  Object {
                    "text": ".",
                  },
                ],
                "sentenceTranslation": "Brother James.",
              },
            ],
          },
          Object {
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 10.857,
                    "start": 8.831,
                    "text": "Dormez-vous?",
                    "translation": "Are you sleeping?",
                  },
                ],
                "sentenceTranslation": "Are you sleeping?",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 12.71,
                    "start": 11.025,
                    "text": "Dormez-vous?",
                    "translation": "Are you sleeping?",
                  },
                ],
                "sentenceTranslation": "Are you sleeping?",
              },
            ],
          },
          Object {
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 13.706,
                    "start": 13.21,
                    "text": "Sonnez",
                    "translation": "Ring",
                  },
                  Object {
                    "end": 15.399,
                    "explanation": "These were the bells to wake the monks for the \\"matins\\", the first chants in the day, very early in the morning.",
                    "start": 13.704,
                    "text": "les matines",
                    "translation": "the morning bells",
                  },
                  Object {
                    "text": "!",
                  },
                ],
                "sentenceTranslation": "Ring the morning bells!",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 15.924,
                    "start": 15.39,
                    "text": "Sonnez",
                    "translation": "Ring",
                  },
                  Object {
                    "end": 17.572,
                    "explanation": "These were the bells to wake the monks for the \\"matins\\", the first chants in the day, very early in the morning.",
                    "start": 15.923,
                    "text": "les matines",
                    "translation": "the morning bells",
                  },
                  Object {
                    "text": "!",
                  },
                ],
                "sentenceTranslation": "Ring the morning bells!",
              },
            ],
          },
          Object {
            "sentences": Array [
              Object {
                "lects": Array [
                  Object {
                    "end": 19.319,
                    "explanation": "An onomatopoeia for bells, like our \\"ding dong\\".",
                    "start": 17.57,
                    "text": "Ding, dang, dong.",
                  },
                ],
                "sentenceTranslation": "Ding, dang, dong.",
              },
              Object {
                "lects": Array [
                  Object {
                    "end": 21.632,
                    "explanation": "An onomatopoeia for bells, like our \\"ding dong\\".",
                    "start": 19.784,
                    "text": "Ding, dang, dong.",
                  },
                ],
                "sentenceTranslation": "Ding, dang, dong.",
              },
            ],
          },
        ]
      }
      readTime={null}
      showModal={[Function]}
    />
  </div>
  <Modal
    data={null}
    hideModal={[Function]}
  />
</div>
`;

exports[`Lectorem the main component render with data with no data should render without crashing 1`] = `
<p>
  Loading...
</p>
`;
